# Data-Structures-Lab3

./: CMakeLists.txt  ex_1.txt  ex_lab3.txt  main.c
binary_tree/: binarytree.c  binarytree.h
src/: operationTest.c
src/binarytree/: binarytree.c  binarytree.h
src/load_files/: CMakeLists.txt
